tests/negative/test_data_member_cn_no_init.orb
data Foo {
    i32 cn x;
}

fnc main() {}